--- a/LoRDeckCodes/LoRDeckCodes.csproj
+++ b/LoRDeckCodes/LoRDeckCodes.csproj
@@ -1,13 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 <PropertyGroup>
     <Version>1.2.2</Version>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
 </PropertyGroup>
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;net461</TargetFrameworks>
     <IsPackable>true</IsPackable>
     <ApplicationIcon />
     <OutputType>Library</OutputType>
     <StartupObject />
   </PropertyGroup>
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Properties\launchSettings.json" />
+  </ItemGroup>
 
 </Project>
