--- a/LoRDeckCodes/LoRDeckCodes.csproj
+++ b/LoRDeckCodes/LoRDeckCodes.csproj
@@ -3,6 +3,7 @@
     <Version>1.2.2</Version>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <TieredCompilation>false</TieredCompilation>
 </PropertyGroup>
   <PropertyGroup>
     <IsPackable>true</IsPackable>
